project2 part1
